# kicad-template-jlcpcb

./: CMakeLists.txt  LICENSE  README.md
Projects/jlcpcb-2layer/: jlcpcb-2layer.kicad_pro
Projects/jlcpcb-2layer/meta/: info.html
Projects/jlcpcb-multilayer/: jlcpcb-multilayer.kicad_pro
Projects/jlcpcb-multilayer/meta/: info.html
